[package]
name = "sentry_tunnel"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name="sentry_tunnel"
path="src/main.rs"

[dependencies]
gotham = "0.6.0"
gotham_derive = "0.6.0"
futures-util = "0.3.14"
serde = "1.0"
serde_json = "1.0"
isahc = {version = "1.5", features = ["static-ssl", "http2", "static-curl", "text-decoding"], default_features=false}
anyhow = "1.0"
envmnt = "0.9"
log = "0.4"
stderrlog = "0.5"
